[project]
name = "pagerbuddy"
version = "0.1.0"
description = "Twilio-based on-call incident management service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.3",
  "email-validator>=2.2",
  "python-multipart>=0.0.9",
  "twilio>=9.0",
  "faster-whisper>=1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
